# qtcreator-dlang

./: .gitignore  CMakeLists.txt  DubProject.json.in  README.md  dubproject.cpp  dubproject.h  dubproject_global.h  dubprojectconstants.h  qtcreator-dlang.pro
.github/workflows/: build_cmake.yml
dub_cpp/: .gitignore  dub.json  dub.selections.json  dub_cpp.pro
dub_cpp/source/: DProject.d
dub_cpp/source/dub_cpp/: dub_cpp.d
dubproject/: DubProject.json.in  DubProject.mimetypes.xml  d_initializer.cpp  d_initializer.h  dproject.cpp  dproject.h  dubfile.cpp  dubfile.h  dubproject.cpp  dubproject.h  dubproject.pro  dubproject.qrc  dubproject_global.h  dubprojectconstants.h  dubprojectmanager.cpp  dubprojectmanager.h  dubprojectplugin.cpp  dubprojectplugin.h  dubprojectprojectnode.cpp  dubprojectprojectnode.h
